<resources>
	<string name="hello">Hello World, HomeActivity!</string>
	<string name="app_name">smartshop</string>
	<string name="search">Tìm</string>
	<string name="advancedSearch">Advanced Search</string>
	<string name="map">Map</string>
	<string name="hintEnterProductsName">Nhập tên sản phẩm cần tìm</string>
	<string name="chMostUpdate">Mới nhất</string>
	<string name="chCheapest">Giá thấp nhất</string>
	<string name="chMostView">Xem nhiều</string>
	<string name="chQuantity">Số lượng</string>
	<string name="lblUsername">Tên đăng nhập*:</string>
	<string name="lblOldPassword">Mật khẩu cũ:</string>
	<string name="lblPassword">Mật khẩu*:</string>
	<string name="lblConfirm">Xác nhận*:</string>
	<string name="lblFirstName">Tên*:</string>
	<string name="lblLastName">Họ:</string>
	<string name="lblEmail">Email*:</string>
	<string name="lblBirthday">Ngày sinh:</string>
	<string name="hintChooseBirthday">Chọn ngày sinh</string>
	<string name="lblAddress">Địa chỉ:</string>
	<string name="btnTagAddressOnMap">Đánh dấu trên bản đồ</string>
	<string name="btnViewAddressOnMap">Xem trên bản đồ</string>
	<string name="titleChoooseUserLoction">Chọn địa chỉ của bạn</string>
	<string name="hintChangeUserLocation">Click vào bản đồ để thay đổi địa chỉ của bạn
	</string>
	<string name="username">Tên đăng nhập:</string>
	<string name="name">Tên:</string>
	<string name="lastname">Họ:</string>
	<string name="email">Email:</string>
	<string name="birthday">Ngày sinh:</string>
	<string name="address">Địa chỉ:</string>
	<string name="tel">Số điện thoại:</string>
	<string name="edit_profile">Sửa thông tin</string>
	<string name="my_page_list">Trang đã đăng</string>
	<string name="my_product_list">Sản phẩm đã đăng</string>
	<string name="add_new_page">Đăng bài viết mới</string>
	<string name="add_new_product">Đăng sản phẩm mới</string>
	<string name="user_info">Thông tin của tôi</string>
	<string name="subcribe">Đăng ký nhận thông tin</string>
	<string name="tooltipAddressHint">(vd: 268 Lý Thường Kiệt quận 10 HCM)</string>
	<string name="lblPhoneNumber">Số điện thoại:</string>
	<string name="lblAvatar">Hình đại diện:</string>
	<string name="lblRegister">Đăng ký</string>
	<string name="warn_must_enter_address">Bạn chưa nhập địa chỉ</string>
	<string name="err_register_message">Có lỗi trong quá trình đăng ký</string>
	<string name="exit">Thoát</string>
	<string name="username_invalid">Nhập tên đăng nhập </string>
	<string name="password_invalid">Nhập mật khẩu </string>
	<string name="password_not_match">Mật khẩu và xác nhận không trùng nhau</string>
	<string name="first_name_invalid">Nhập tên</string>
	<string name="email_invalid">Email không hợp lệ</string>
	<string name="lblUpdate">Cập nhật</string>
	<string name="lblCancel">Thoát</string>
	<string name="lblOk">Xong</string>
	<string name="errServer">Lỗi hệ thống</string>
	<string name="error">Lỗi</string>
	<string name="lblLogin">Đăng nhập</string>
	<string name="errMustLoginToViewProfile">Bạn chưa đăng nhập</string>
	<string name="loading_when_login">Đang kết nối...</string>
	<string name="errGetLocation">Lỗi kết nối</string>
	<string name="errCantGetLocation">Không tìm được địa chỉ bạn vừa chọn</string>
	<string name="errCantGetDirection">Không tìm được đường giữa hai vị trí trên</string>
	<string name="errGetDirection">Lỗi kết nối</string>
	<string name="errCannotFindCurrentLocation">Không tìm được vị trí hiện tại</string>
	<string name="finding_your_current_location">Đang xác định vị trí hiện tại của bạn</string>
	<string name="your_current_location">Vị trí hiện tại của bạn là (%f, %f)</string>
	<string name="nameOfProduct">Tên</string>
	<string name="priceOfProduct">Giá</string>
	<string name="description">Mô tả</string>
	<string name="isVAT">Tính VAT</string>
	<string name="quantityOfProduct">Số lượng</string>
	<string name="warrantyOfProduct">Bảo hành</string>
	<string name="datePost">Ngày đăng</string>
	<string name="originOfProduct">Xuất xứ</string>
	<string name="addressOfProduct">Địa chỉ</string>
	<string name="latOfProduct">Vĩ độ</string>
	<string name="lngOfProduct">Kinh độ</string>
	<string name="userDefineAttribute">tên của thuộc tính</string>
	<string name="chooseDatePost">Chọn ngày</string>
	<string name="moreAttribute">Thêm thuộc tính</string>
	<string name="chooseCategory">Chọn danh mục cho sản phẩm</string>
	<string name="select">Chọn danh mục</string>
	<string name="tagOnMap">Đánh dấu trên bản đồ</string>
	<string name="path">Đường dẫn</string>
	<string name="add">Thêm</string>
	<string name="please_add_image">Bạn chưa chọn hình để thêm vào</string>
	<string name="hasNoVAT">Không</string>
	<string name="hasVAT">Có</string>
	<string name="product_view">Lượt xem</string>
	<string name="miss_quantity">Chưa điền thông tin về số lượng</string>
	<string name="miss_price">Chưa điền thông tin về giá</string>
	<string name="userName">Username</string>
	<string name="product_basic_info">Thông tin sản phẩm</string>
	<string name="upload_image">Upload hình ảnh</string>
	<string name="product_user_defined_info">Thông tin bổ sung</string>
	<string name="gallery">Gallery</string>
	<string name="warnProductHasNoAddress">Không có thông tin địa chỉ của sản phẩm</string>
	<string name="btnShowDirectionOnMap">Xem trên bản đồ</string>
	<string name="mapApiKey">0oXkvY2tUcbGM8-BK6Myjp770et8Obv5A2PjqnQ</string>
	<string name="page_name">Tên:</string>
	<string name="page_content">Nội dung:</string>
	<string name="page_view">Lượt xem:</string>
	<string name="lblViewComment">Xem bình luận</string>
	<string name="lblViewUser">Xem thông tin người đăng</string>
	<string name="pageView">Số lượt xem</string>
	<string name="hintEnterPagesName">Nhập tên bài viết cần tìm</string>
	<string name="lblInterestedProducts">Quan tâm</string>
	<string name="lblBuyProducts">Bán</string>
	<string name="lblSellProducts">Mua</string>
	<string name="page_most_view">Xem nhiều</string>
	<string name="page_most_update">Mới nhất</string>
	<string name="loading">Đang nạp dữ liệu...</string>
	<string name="user_profile">Thông tin</string>
	<string name="user_pages_list">Danh sách bài viết</string>
	<string name="user_products_list">Danh sách mặt hàng</string>
	<string name="post_new_product">Đăng mặt hàng mới</string>
	<string name="view_notifications">Xem thông báo</string>
	<string name="btnLogin">Đăng nhập</string>
	<string name="btnRegister">Đăng ký</string>
	<string name="tab_list_products">Sản phẩm</string>
	<string name="tab_list_pages">Bài viết</string>
	<string name="tab_search_products">Tìm kiếm SP</string>
	<string name="tab_search_on_map">Bản đồ</string>
	<string name="tab_smartshop_products">SmartShop</string>
	<string name="tab_vatgia_products">Những trang khác</string>
	<string name="btnSearchProductsOnMap">Tìm</string>
	<string name="errorSearchProductsOnMapQueryEmpty">Nhập vào mặt hàng cần tìm kiếm</string>
	<string name="errorSearchProductsOnMapRadius">Nhập vào bán kính hợp lệ</string>
	<string name="warnNoProductFound">Không tìm thấy sản phẩm nào</string>
	<string name="add_new_comment">Thêm bình luận</string>
	<string name="errEmptyComment">Bạn chưa nhập nội dung</string>
	<string name="warn_must_login_to_post_comment">Bạn phải đăng nhập trước</string>
	<string name="warn_has_no_comment">Hiện chưa có bình luận nào</string>
	<string name="search_by_categories">Tìm theo mục</string>
	<string name="cant_connect_network">Không thể kết tới server</string>
	<string name="dirname_app_name">Android File Browser</string>
	<string name="menu_new_folder">Tạo thư mục</string>
	<string name="dirnameinput_cmd_return">Lưu</string>
	<string name="dirnameinput_hint">Nhập tên thư mục:</string>
	<string name="up_one_level">..</string>
	<string name="current_dir">.</string>
	<string name="do_you_want_to_choose_this_file">Bạn có muốn chọn file này?</string>
	<string name="do_you_want_to_change_avatar">Bạn có muốn thay đổi avatar?</string>
	<string name="yes">Có</string>
	<string name="no">Không</string>
	<string name="notice">Thông báo</string>
	<string name="can_not_choose_this_file">Định dạng file không được hỗ trợ</string>
	<string name="back">Trở về</string>
	<string name="cant_upload_image_try_again">Không thể upload hình ảnh. Bạn muốn thử lại không?
	</string>
	<string name="attr_name">Tên:</string>
	<string name="attr_value">Giá trị:</string>
	<string name="num_of_stores">Có %d cửa hàng</string>
	<string name="tab_vatgia_companies">So sánh giá</string>
	<string name="tab_vatgia_product_detail">Thông tin kĩ thuật</string>
	<string name="lblSubscribe">Đăng ký nhận thông tin sản phẩm</string>
	<string name="btnSubcribe">Đăng ký</string>
	<string name="lblSubscribeEmail">Email</string>
	<string name="lblSubscribeMobile">Mobile</string>
	<string name="lblAgree">Đồng ý</string>
	<string name="hint_product_name_to_subcribe">Tên sản phẩm</string>
	<string name="email_title">Tiêu đề</string>
	<string name="email_sender">Người gửi</string>
	<string name="email_receiver">Người nhận</string>
	<string name="email_content">Nội dung:</string>
	<string name="send_email">Gửi</string>
	<string name="warn_email_title_empty">Chưa nhập tiêu đề</string>
	<string name="warn_email_sender_empty">Chưa nhập người gửi</string>
	<string name="warn_email_receiver_empty">Chưa nhập người nhận</string>
	<string name="warn_email_sender_wrong_format">Email sai định dạng</string>
	<string name="warn_email_content_empty">Chưa nhập nội dung</string>
	<string name="date">Ngày : </string>
	<string name="warn_no_notification">Không có thông báo nào</string>
	<string name="add_fiend">Thêm bạn</string>
	<string name="tag_product">Bạn được tag vào sản phẩm</string>
	<string name="tag_page">Bạn được tag vào bài viết</string>
	<string name="untag_product">Bạn được gỡ tag khỏi sản phẩm</string>
	<string name="untag_page">Bạn được gỡ tag khỏi bài viết</string>
	<string name="add_comment_product">Có thành viên khác bình luận vào sản phẩm của bạn
	</string>
	<string name="add_comment_page">Có thành viên khác bình luận vào bài viết của bạn
	</string>
	<string name="tag_product_to_page">Tag sản phẩm vào bài viết</string>
	<string name="invalid_intent">Gọi giao diện không hợp lệ</string>
	<string name="my_current_location">Vị trí của tôi</string>
	<string name="search_location">Tìm kiếm vị trí</string>
	<string name="warn_search_location_empty">Nhập vào địa điểm cần tìm</string>
	<string name="warn_cannot_find_search_location">Không tìm thấy địa điểm vừa nhập</string>
	<string name="init_data">Đang nạp dữ liệu...</string>
	<string name="no_category">Chưa phân danh mục</string>
	<string name="radius">Bán kính</string>
	<string name="subcribe_sms">SMS</string>
	<string name="subcribe_email">Email</string>
	<string name="push_notification">Push</string>
	<string name="subcribe_categories">Chọn danh mục</string>
	<string name="register_subcribe">Đăng ký</string>
	<string name="subcribe_active">Kích hoạt</string>
	<string name="subcribe_update">Cập nhật</string>
	<string name="subcribe_detail">Chi tiết</string>
	<string name="missing_subcribe_location">Bạn chưa chọn địa điểm</string>
	<string name="hintFriendSearch">Nhập tên hay email</string>
	<string name="addFriend">Kết bạn</string>
	<string name="addFriendSuccess">Thêm danh sách bạn bè thành công</string>
	<string name="addFriendFail">Thêm bạn bè thất bại, vui lòng thử lại</string>
	<string name="tagFriends">Tag friends</string>
	<string name="postOnFacebook">Đăng lên FaceBook</string>
	<string name="postOnFacebookSuccess">Mặt hàng của bạn đã được đăng lên Facebook</string>
	<string name="postPageOnFacebookSuccess">Trang của bạn đã được đăng lên Facebook</string>
	<string name="loginFacebookSuccess">Đăng nhập Facebook thành công</string>
	<string name="loginFacebookFail">Đăng nhập Facebook thất bại</string>
	<string name="logoutFacebookSuccess">Đăng xuất Facebook thành công</string>
	<string name="logoutFacebookLoading">Đang thoát khỏi tài khoản Facebook</string>
</resources>