<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent" android:layout_height="wrap_content"
	android:scrollbars="vertical">
	<LinearLayout android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:orientation="vertical">
		<LinearLayout android:orientation="horizontal"
			android:layout_height="wrap_content" android:layout_width="fill_parent">
			<TextView android:id="@+id/txtViewName"
				android:layout_width="wrap_content" android:layout_height="wrap_content"
				android:text="@string/nameOfProduct" />
			<TextView android:id="@+id/txtViewNameOfProduct"
				android:layout_width="fill_parent" android:layout_height="wrap_content" />
		</LinearLayout>
		<LinearLayout android:orientation="horizontal"
			android:layout_height="wrap_content" android:layout_width="fill_parent">
			<TextView android:id="@+id/txtViewPrice"
				android:layout_width="wrap_content" android:layout_height="wrap_content"
				android:text="@string/priceOfProduct" />
			<TextView android:id="@+id/txtViewPriceOfProduct"
				android:layout_width="fill_parent" android:layout_height="wrap_content" />
		</LinearLayout>
		<LinearLayout android:orientation="horizontal"
			android:layout_height="wrap_content" android:layout_width="fill_parent">
			<TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
				android:text="@string/isVAT" />
			<TextView android:id="@+id/isVATInViewProduct"
				android:layout_width="wrap_content" android:layout_height="wrap_content" />
		</LinearLayout>
		<LinearLayout android:orientation="horizontal"
			android:layout_height="wrap_content" android:layout_width="fill_parent">
			<TextView android:id="@+id/txtViewQuantity"
				android:layout_width="wrap_content" android:layout_height="wrap_content"
				android:text="@string/quantityOfProduct" />
			<TextView android:id="@+id/txtViewQuantityOfProduct"
				android:layout_width="fill_parent" android:layout_height="wrap_content" />
		</LinearLayout>
		<LinearLayout android:orientation="horizontal"
			android:layout_height="wrap_content" android:layout_width="fill_parent">
			<TextView android:id="@+id/txtViewDatePost"
				android:layout_width="wrap_content" android:layout_height="wrap_content"
				android:text="@string/datePost" />
			<TextView android:id="@+id/txtViewDatePostOfProduct"
				android:layout_width="fill_parent" android:layout_height="wrap_content" />
		</LinearLayout>
		<LinearLayout android:orientation="horizontal"
			android:layout_height="wrap_content" android:layout_width="fill_parent">
			<TextView android:id="@+id/txtViewWarranty"
				android:layout_width="wrap_content" android:layout_height="wrap_content"
				android:text="@string/warrantyOfProduct" />
			<TextView android:id="@+id/txtViewWarrantyOfProduct"
				android:layout_width="fill_parent" android:layout_height="wrap_content" />
		</LinearLayout>
		<LinearLayout android:orientation="horizontal"
			android:layout_height="wrap_content" android:layout_width="fill_parent">
			<TextView android:id="@+id/txtViewOrigin"
				android:layout_width="wrap_content" android:layout_height="wrap_content"
				android:text="@string/originOfProduct" />
			<TextView android:id="@+id/txtViewOriginOfProduct"
				android:layout_width="fill_parent" android:layout_height="wrap_content" />
		</LinearLayout>
		<LinearLayout android:orientation="horizontal"
			android:layout_height="wrap_content" android:layout_width="fill_parent">
			<TextView android:id="@+id/txtViewAddress"
				android:layout_width="wrap_content" android:layout_height="wrap_content"
				android:text="@string/addressOfProduct" />
			<TextView android:id="@+id/txtViewAddressOfProduct"
				android:layout_width="fill_parent" android:layout_height="wrap_content" />
		</LinearLayout>
		<LinearLayout android:orientation="horizontal"
			android:layout_height="wrap_content" android:layout_width="fill_parent">
			<TextView android:id="@+id/txtViewUserName"
				android:layout_width="wrap_content" android:layout_height="wrap_content"
				android:text="@string/userName" />
			<TextView android:id="@+id/txtUserNameOfProduct"
				android:layout_width="fill_parent" android:layout_height="wrap_content" />
		</LinearLayout>
	</LinearLayout>
</ScrollView>
