<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent" android:layout_height="fill_parent"
	android:orientation="vertical" android:background="@color/background">
	<include android:layout_width="fill_parent"
		android:layout_height="wrap_content" layout="@layout/header" />
	<LinearLayout android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:orientation="horizontal">
		<EditText android:id="@+id/txtSearch" android:textSize="12dip"
			android:layout_width="wrap_content" android:layout_height="wrap_content"
			android:hint="@string/hintEnterProductsName" android:layout_weight="1" />
		<Button android:layout_width="wrap_content" android:text="@string/search"
			android:layout_height="wrap_content" android:id="@+id/btnSearch" />
		<LinearLayout android:orientation="vertical"
			android:layout_width="wrap_content" android:layout_height="wrap_content">
			<Button android:layout_width="wrap_content"
				android:background="@drawable/map_icon" android:layout_height="wrap_content"
				android:id="@+id/btnSearchOnMap" />
		</LinearLayout>
	</LinearLayout>

	<LinearLayout android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:orientation="horizontal">
		<CheckBox android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:text="@string/chMostUpdate"
			android:textSize="12dip" android:id="@+id/chMostUpdate" />
		<CheckBox android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:text="@string/chCheapest"
			android:textSize="12dip" android:id="@+id/chCheapest" />
		<CheckBox android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:text="@string/chMostView"
			android:textSize="12dip" android:id="@+id/chMostView" />

	</LinearLayout>

	<ListView android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:id="@+id/listViewProductAfterSearch" />
</LinearLayout>
