<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent" android:layout_height="wrap_content" android:orientation="vertical">
	
	<TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
		android:textStyle="bold" android:text="@string/attr_name"/>
		
	<EditText android:layout_width="fill_parent" android:layout_height="wrap_content"
		android:id="@+id/txtName" />
		
	<TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
		android:textStyle="bold" android:text="@string/attr_value"/>
		
	<EditText android:layout_width="fill_parent" android:layout_height="wrap_content"
		android:id="@+id/txtValue" />
		
	<Button android:layout_width="wrap_content" android:layout_height="wrap_content"
		android:id="@+id/btnOk" android:layout_gravity="center" android:text="@string/lblOk" />
	
</LinearLayout>
